# grading-lib

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MAINTENANCE.md  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  tests.yml
cs3560_grading_lib/: __init__.py  common.py  makefile.py  repository.py
cs3560_grading_lib/tools/: collect_autograding_tests.py
docs/: README.md  requirements.txt
docs/source/: api.md  changelog.md  conf.py  getting-started.md  index.md  problem-authoring.md  problem-toml-spec.md  roadmaps.md
grading_lib/: VERSION  __init__.py  __main__.py  common.py  makefile.py  qa.py  repository.py  util.py
grading_lib/cli/: __init__.py  dev.py  internal.py
grading_lib/tools/: collect_autograding_tests.py
tests/: test_cli.py  test_common.py  test_makefile.py  test_repository.py  test_util.py
