[project]
name = "cs3560-grading-lib"
requires-python = ">=3.12"
description = "A common library for the grading scripts."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["GitPython", 'importlib-metadata; python_version>="3.12"']
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/OU-CS3560/cs3560-grading-lib"
Repository = "https://github.com/OU-CS3560/cs3560-grading-lib.git"
Issues = "https://github.com/OU-CS3560/cs3560-grading-lib/issues"
Changelog = "https://github.com/OU-CS3560/cs3560-grading-lib/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "cs3560_grading_lib.__version__" }

[tool.isort]
profile = "black"
