[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cs3560-grading-lib"
requires-python = ">=3.10"
description = "A common library for the grading scripts."
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Education :: Testing",
]
dependencies = ["tomli", "GitPython", 'importlib-metadata; python_version>="3.10"']

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
doc = ["sphinx", "myst-parser", "sphinx-book-theme", "sphinx-autodoc2"]

[project.urls]
Documentation = "https://grading-lib.readthedocs.io/en/latest/"
Homepage = "https://github.com/OU-CS3560/cs3560-grading-lib"
Repository = "https://github.com/OU-CS3560/cs3560-grading-lib.git"
Issues = "https://github.com/OU-CS3560/cs3560-grading-lib/issues"
Changelog = "https://github.com/OU-CS3560/cs3560-grading-lib/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["grading_lib", "grading_lib.tools"]

[tool.setuptools.dynamic]
version = { file = "grading_lib/VERSION" }

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "interest: marks tests as interested (deselect with '-m \"not interest\"')",
]
