[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cs3560-grading-lib"
requires-python = ">=3.10"
description = "A common library for the grading scripts."
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Education :: Testing",
]
dependencies = [
    "click",
    "tomli",
    "GitPython",
    'importlib-metadata; python_version>="3.10"',
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "ruff", "tox"]

[project.urls]
Documentation = "https://grading-lib.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/OU-CS3560/cs3560-grading-lib"
"Issue Tracker" = "https://github.com/OU-CS3560/cs3560-grading-lib/issues"
Changelog = "https://github.com/OU-CS3560/cs3560-grading-lib/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["grading_lib", "grading_lib.tools", "grading_lib.cli"]

[tool.setuptools.dynamic]
version = { file = "grading_lib/VERSION" }

[tool.ruff]
src = ["grading_lib"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle error
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff-specific rules
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
]
ignore = [
    "E501"  # Line too long
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
# So the imports in tests/ still sort the same way.
known-first-party = ["grading_lib"] 

[tool.mypy]
files = ["grading_lib"]
show_error_codes = true
pretty = true
strict = true

[tool.pytest.ini_options]
markers = [
    "interest: marks tests as interested (deselect with '-m \"not interest\"')",
]
